examples/invalid/program11.c
int main() {
    int 9abc;
    return 0;
}

